# The-Muggle-Guide

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
api_service/: Dockerfile  alembic.ini  requirements.txt
api_service/alembic/: env.py
api_service/alembic/versions/: 001_initial.py
api_service/app/: config.py  database.py  logging_config.py  main.py  seed.py
api_service/app/auth/: dependencies.py  jwt_handler.py  password.py
api_service/app/middleware/: rate_limiter.py
api_service/app/models/: __init__.py  book.py  interaction.py  user.py
api_service/app/routers/: admin.py  auth.py  books.py  interactions.py  recommendations.py
api_service/app/schemas/: __init__.py  book.py  interaction.py  recommendation.py  user.py
api_service/app/services/: cache.py  recommendation_client.py
frontend/: app.js  index.html  styles.css
localstack/: init-aws.sh
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: default.conf
recommendation_engine/: Dockerfile  requirements.txt
recommendation_engine/app/: cold_start.py  config.py  main.py  model_store.py
recommendation_engine/app/models/: __init__.py  collaborative.py  content_based.py  hybrid.py
recommendation_engine/app/routers/: __init__.py  recommend.py
shared/models/: .gitkeep
tests/: conftest.py  smoke_test.sh  test_api.py  test_cloud.sh
training_pipeline/: Dockerfile  requirements.txt
training_pipeline/app/: celery_app.py  config.py
training_pipeline/app/pipeline/: collab_trainer.py  content_trainer.py  data_loader.py  evaluator.py  (+1 more)
(+2 files in other folders)
